# server/apps/restaurants/views/restaurant.py
@@ -1,5 +1,4 @@
-from rest_framework.generics import ListAPIView, RetrieveAPIView
-from rest_framework.permissions import IsAuthenticated
+from rest_framework.generics import ListAPIView
 
 from apps.core.services.pagination import PaginationObject
 from apps.restaurants.models import Restaurant
@@ -8,19 +7,7 @@ from apps.reviews.models import Review
 from apps.reviews.serializers import ReviewSerializer
 
 
-class RestaurantRetrieveAPIView(RetrieveAPIView):
-    permission_classes = (IsAuthenticated,)
-    serializer_class = RestaurantSerializer
-
-    def get_queryset(self):
-        return Restaurant.objects.prefetch_related(
-            "plans",
-            "schedules",
-        ).filter(pk=self.kwargs["pk"])
-
-
 class ReviewsRestaurantAPIView(ListAPIView):
-    permission_classes = (IsAuthenticated,)
     serializer_class = ReviewSerializer
     pagination_class = PaginationObject
 
@@ -31,7 +18,6 @@ class ReviewsRestaurantAPIView(ListAPIView):
 
 
 class RestaurantListAPIView(ListAPIView):
-    permission_classes = (IsAuthenticated,)
     serializer_class = RestaurantSerializer
     pagination_class = PaginationObject
 
