# server/apps/users/serializers/employee.py
@@ -2,6 +2,7 @@ from rest_framework import serializers
 from rest_framework_simplejwt.serializers import TokenObtainPairSerializer
 
 from apps.core.serializers import BaseModelSerializer
+from apps.restaurants.models import Restaurant
 from apps.users.models import Employee
 
 
@@ -24,6 +25,11 @@ class EmployeeAuthSerializer(TokenObtainPairSerializer):
 class EmployeeSerializer(BaseModelSerializer):
     first_name = serializers.CharField(source="user.first_name")
     last_name = serializers.CharField(source="user.last_name")
+    restaurant = serializers.PrimaryKeyRelatedField(
+        queryset=Restaurant.objects.all(),
+        source="restaurant.id",
+        allow_null=True,
+    )
 
     class Meta:
         model = Employee
@@ -32,4 +38,5 @@ class EmployeeSerializer(BaseModelSerializer):
             'first_name',
             'last_name',
             'role',
+            'restaurant',
         )
