# server/apps/users/views/employee.py
@@ -1,4 +1,5 @@
 from rest_framework.generics import RetrieveAPIView
+from rest_framework.permissions import IsAuthenticated
 from rest_framework_simplejwt.views import TokenObtainPairView
 
 from apps.users.models import Employee
@@ -11,6 +12,8 @@ class EmployeeAuthAPIView(TokenObtainPairView):
 
 
 class EmployeeRetrieveAPIView(RetrieveAPIView):
-    queryset = Employee.objects.all()
     serializer_class = EmployeeSerializer
-    permission_classes = (IsCurrentUser,)
+    permission_classes = (IsAuthenticated, IsCurrentUser,)
+
+    def get_object(self):
+        return Employee.objects.get(user_id=self.request.user.id)
